--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: Notbuk
 description: My Developer Notebook
 author: Jed Brazal
 
+baseurl: /notbuk/
 
 # Markdown processor
 markdown: kramdown
