--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,28 @@ author: Jed Brazal
 
 baseurl: /notbuk
 
-# Markdown processor
-markdown: kramdown
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin    : "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 
-# Style
-sass:
-    sass_dir: _sass
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
