--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
       share: true
@@ -74,7 +74,7 @@ footer:
   links:
     - label: "Buy me Coffee"
       icon: 
-      url: "https://ko-fi.com/papajedder"
+      url: "https://ko-fi.com/D1D4IP34"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/papajedder"
