--- a/GemFile
+++ b/GemFile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 # gem 'github-pages'
-# gem "minimal-mistakes-jekyll"
+gem "minimal-mistakes-jekyll"
 
 # gem 'jekyll'
 
