--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Notbuk
 name: Jed Brazal
 description: My Developer Notebook
-theme: minimal-mistakes-jekyll
+remote_theme: minimal-mistakes-jekyll
 minimal_mistakes_skin    : "default" #, "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 baseurl: /notbuk
