--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,19 @@
 title: Notbuk
 name: Jed Brazal
 description: My Developer Notebook
-remote_theme: "mmistakes/minimal-mistakes"
+# remote_theme: "mmistakes/minimal-mistakes"
+theme: minimal-mistakes-jekyll
 minimal_mistakes_skin    : "default" #, "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 baseurl: /notbuk
+
+
+collections: 
+  snippets:
+    output: true
+
+
+
 
 # Site Author
 author:
