--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /categories
   - title: Tags
     url: /tags
-  - title: "Sitemap"
-    url: /sitemap.xml
+  - title: "Snippets"
+    url: /snippets
   - title: Search
     url: /search
