--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 title: Notbuk
 name: Jed Brazal
 description: My Developer Notebook
-remote_theme: "mmistakes/minimal-mistakes"
-# theme: minimal-mistakes-jekyll
+# remote_theme: "mmistakes/minimal-mistakes"
+theme: minimal-mistakes-jekyll
 minimal_mistakes_skin    : "dirt" #, "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 baseurl: /notbuk
-
 permalink: /:categories/:title/
 
 collections: 
